session5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: app
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
